--- a/MVVMHabit-androidx/app/build.gradle
+++ b/MVVMHabit-androidx/app/build.gradle
@@ -35,8 +35,8 @@ dependencies {
         exclude group: 'com.android.support'
     }
     //MVVMHabit
-//    implementation project(':mvvmhabit')
-    implementation rootProject.ext.dependencies.MVVMHabit
+    implementation project(':mvvmhabit')
+//    implementation rootProject.ext.dependencies.MVVMHabit
     //内存泄漏测试
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.6.3'
     debugImplementation 'com.squareup.leakcanary:leakcanary-support-fragment:1.6.3'
